--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ img {
 	position: absolute;
 	top: 3px;
 	right: 1px;
-	background-image: url('/search_icon_btn.png');
+	background-image: url('https://steamstore-a.akamaihd.net/public/images/v6/search_icon_btn.png');
 }
 </style>
 </head>
